# Nelder-mead-optimization

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  frontend.py  imgui.ini  Отчет МО Голубев, Пудков, Самохин.docx
Frontend/: CMakeLists.txt  main.cpp
Frontend/include/: app.h  graphics.h  stringResources.h  windowSetup.h
Frontend/src/: app.cpp  appUI.cpp  graphics.cpp  main.cpp  stringResources.cpp  windowSetup.cpp
FunctionReader/: CMakeLists.txt  Read.txt
FunctionReader/include/: Algebra.h  Definition.h  ExpressionParse.h  ExpressionParser.h  Function.h  PostStringCalculater.h  PostStringCalculater.hpp  PostStringTransfer.h
FunctionReader/my_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
FunctionReader/src/: Function.cpp  StringDecode.cpp  post_string_calculater.cpp
FunctionReader/tests/: main.cpp
NelderMeadSolver/: CMakeLists.txt  NelderMeadSolver.sln  NelderMeadSolver.vcxproj
NelderMeadSolver/FunctionReader/: CMakeLists.txt
NelderMeadSolver/FunctionReader/include/: algebra.h  definition.h  expression_parser.h  function.h  post_string_calculater.h  post_string_transfer.h
NelderMeadSolver/FunctionReader/src/: StringDecode.cpp  algebra.cpp  expression_parse.cpp  expression_parser.cpp  function.cpp  post_string_calculater.cpp  post_string_transfer.cpp
NelderMeadSolver/Points/include/: point.h
NelderMeadSolver/Points/src/: constructors.cpp  measure.cpp  operators.cpp
NelderMeadSolver/include/: logger.h  solver.h
NelderMeadSolver/src/: logger.cpp  playground.cpp  solver.cpp  solver_utils.cpp
NelderMeadSolver/tests/: solverTesting.cpp
Points/: CMakeLists.txt
Points/include/: point.h
Points/src/: constructors.cpp  main.cpp  operators.cpp
Points/tests/: pointsTesting.cpp
PythonFrontend/: frontend.py
my-build/: CMakeCache.txt  Makefile  cmake_install.cmake
my-build/FunctionReader/: CTestTestfile.cmake  Makefile  cmake_install.cmake
my-build/NelderMeadSolver/: CTestTestfile.cmake  Makefile  cmake_install.cmake
my-build/Points/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/: CMakeLists.txt
tests/src/: functionReaderTesting.cpp  loggerTesting.cpp  pointsTesting.cpp  solverTesting.cpp
tests/src/solverTests/: DiffTests.cpp  ExeptionTests.cpp  MiddleTests.cpp  SimpleTests.cpp
